--- a/backend/package.json
+++ b/backend/package.json
@@ -18,20 +18,24 @@
     "@kubernetes/client-node": "^0.22.2",
     "@monaco-editor/react": "^4.6.0",
     "@opensearch-project/opensearch": "^2.12.0",
+    "asn1": "^0.2.6",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2",
+    "express": "^4.21.1",
     "extract-zip": "^2.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.3",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "semver": "^7.6.3",
+    "sshpk": "^1.18.0",
     "tar": "^7.4.3",
     "uuid": "^10.0.0",
     "winston": "^3.16.0",
-    "ws": "^8.2.3",
+    "ws": "^8.18.0",
     "yaml": "^2.6.0"
   },
   "devDependencies": {
