--- a/backend/deploymentTemplate/opensearch-master/opensearch-master-template.yaml
+++ b/backend/deploymentTemplate/opensearch-master/opensearch-master-template.yaml
@@ -116,7 +116,7 @@ envFrom: []
 # A list of secrets and their paths to mount inside the pod
 # This is useful for mounting certificates for security and for mounting
 # the X-Pack license
-secretMounts: []
+secretMounts: ${SECRET_MOUNT} #[123, 456]
 
 hostAliases: []
 # - ip: "127.0.0.1"
@@ -140,10 +140,10 @@ opensearchJavaOpts: "${JAVA_HEAP}" #[-Xmx2G -Xms2G, -Xmx4G -Xms4G, -Xmx6G -Xms6G
 
 resources:
   requests:
-    cpu: "${CPU_REQUEST}"" #[200m, 300m, 400m, 500m, 600m, 700m, 800m, 900m, 1000m, ]
-    memory: "${MEMORY_REQUEST}"" #[2Gi, 4Gi, 8Gi]
+    cpu: "${CPU_REQUEST}" #[200m, 300m, 400m, 500m, 600m, 700m, 800m, 900m, 1000m,11000m ]
+    memory: "${MEMORY_REQUEST}" #[2Gi, 4Gi, 8Gi]
   limits:
-    cpu: "${CPU_LIMIT}"" #[2000m, 3000m, 4000m, 5000m, 6000m, 7000m, 8000m]
+    cpu: "${CPU_LIMIT}" #[2000m, 3000m, 4000m, 5000m, 6000m, 7000m, 8000m]
     memory: "${MEMORY_LIMIT}" #[2Gi, 4Gi, 8Gi, 10Gi, 12Gi, 16Gi, 18Gi, 20Gi, 24Gi, 32Gi]
 initResources:
   limits:
@@ -421,7 +421,7 @@ sysctlInit:
   enabled: false
   # override image, which is busybox by default
   # image: busybox
-  # override image tag, which is latest by default
+  # override image tag, which is latest by default 1
   # imageTag:
 
 ## Enable to add 3rd Party / Custom plugins not offered in the default OpenSearch image.
