--- a/backend/deploymentTemplate/opensearch-master/deploy-scripts/opensearch-master-1.0.0-persistentVolumes.yaml
+++ b/backend/deploymentTemplate/opensearch-master/deploy-scripts/opensearch-master-1.0.0-persistentVolumes.yaml
@@ -6,7 +6,7 @@ metadata:
     type: local
 spec:
   capacity:
-    storage: 4Ti
+    storage: null
   volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
@@ -21,4 +21,4 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - kind-control-plane
+          - null
