--- a/backend/deploymentTemplate/opensearch-master/opensearch-master-1.0.0-final.yaml
+++ b/backend/deploymentTemplate/opensearch-master/opensearch-master-1.0.0-final.yaml
@@ -116,7 +116,7 @@ envFrom: []
 # A list of secrets and their paths to mount inside the pod
 # This is useful for mounting certificates for security and for mounting
 # the X-Pack license
-secretMounts: []
+secretMounts: ${SECRET_MOUNT} #[123, 456]
 
 hostAliases: []
 # - ip: "127.0.0.1"
@@ -125,8 +125,8 @@ hostAliases: []
 #   - "bar.local"
 
 image:
-  repository:  ${REPOSITORY}
-  tag: 2.12.0 #["2.12.0"]
+  repository:  "${REPOSITORY}"
+  tag: "latest" #["2.12.0"]
   pullPolicy: IfNotPresent
   insecureRegistry: true
 
@@ -140,11 +140,11 @@ opensearchJavaOpts: "-Xmx8G -Xms8G" #[-Xmx2G -Xms2G, -Xmx4G -Xms4G, -Xmx6G -Xms6
 
 resources:
   requests:
-    cpu: 500m #[200m, 300m, 400m, 500m, 600m, 700m, 800m, 900m, 1000m, ]
-    memory: 2Gi #[2Gi, 4Gi, 8Gi]
+    cpu: "500m" #[200m, 300m, 400m, 500m, 600m, 700m, 800m, 900m, 1000m,11000m ]
+    memory: "2Gi" #[2Gi, 4Gi, 8Gi]
   limits:
-    cpu: 2000m #[2000m, 3000m, 4000m, 5000m, 6000m, 7000m, 8000m]
-    memory: 4Gi #[2Gi, 4Gi, 8Gi, 10Gi, 12Gi, 16Gi, 18Gi, 20Gi, 24Gi, 32Gi]
+    cpu: "2000m" #[2000m, 3000m, 4000m, 5000m, 6000m, 7000m, 8000m]
+    memory: "4Gi" #[2Gi, 4Gi, 8Gi, 10Gi, 12Gi, 16Gi, 18Gi, 20Gi, 24Gi, 32Gi]
 initResources:
   limits:
     cpu: "100m"
@@ -205,10 +205,10 @@ persistence:
   #   set, choosing the default provisioner.  (gp2 on AWS, standard on
   #   GKE, AWS & OpenStack)
   #
-  storageClass: local-storage #[local-storage]
+  storageClass: "local-storage" #[local-storage]
   accessModes:
-    - ReadOnlyMany #[ReadWriteOnce, ReadWriteMany, ReadOnlyMany]
-  size: 4Ti #[1Ti, 2Ti, 3Ti, 4Ti, 5Ti, 6Ti, 7Ti, 8Ti, 9T, 10Ti, 20Ti, 30Ti]
+    - ReadWriteOnce #[ReadWriteOnce, ReadWriteMany, ReadOnlyMany]
+  size: 9T #[1Ti, 2Ti, 3Ti, 4Ti, 5Ti, 6Ti, 7Ti, 8Ti, 9T, 10Ti, 20Ti, 30Ti]
   annotations: {}
 
 extraVolumes: []
@@ -421,7 +421,7 @@ sysctlInit:
   enabled: false
   # override image, which is busybox by default
   # image: busybox
-  # override image tag, which is latest by default
+  # override image tag, which is latest by default 1
   # imageTag:
 
 ## Enable to add 3rd Party / Custom plugins not offered in the default OpenSearch image.
