--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@kubernetes/client-node": "^0.22.2",
     "@monaco-editor/react": "^4.6.0",
     "@opensearch-project/opensearch": "^2.12.0",
+    "archiver": "^7.0.1",
     "asn1": "^0.2.6",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
