--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,10 +5,12 @@
   "type": "module",
   "scripts": {
     "clean": "rimraf dist",
-    "dev": "vite",
+    "dev": "vite --mode development",
     "build": "npm run clean && vite build --mode production",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:dev": "vite build --mode development",
+    "build:prod": "vite build --mode production"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -19,6 +21,7 @@
     "@mui/material": "^6.1.5",
     "@mui/x-data-grid": "^7.22.0",
     "@mui/x-date-pickers": "^7.22.0",
+    "archiver": "^7.0.1",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "deep-object-diff": "^1.1.9",
