--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^8.7.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
     "semver": "^7.6.3",
     "sshpk": "^1.18.0",
     "tar": "^7.4.3",
