--- a/backend/deploymentTemplate/opensearch-master/deploy-scripts/opensearch-master-1.0.0-storageClass.yaml
+++ b/backend/deploymentTemplate/opensearch-master/deploy-scripts/opensearch-master-1.0.0-storageClass.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: opensearch-master-storageclass
+  name: opensearch-master-1.0.0-storageclass
 provisioner: kubernetes.io/no-provisioner
 reclaimPolicy: Retain
 volumeBindingMode: WaitForFirstConsumer
