complete the process of creating local directory via k8s temporay pod

--- a/backend/deploymentTemplate/opensearch-master/deploy-scripts/opensearch-master-1.0.0-persistentVolumes.yaml
+++ b/backend/deploymentTemplate/opensearch-master/deploy-scripts/opensearch-master-1.0.0-persistentVolumes.yaml
@@ -6,14 +6,14 @@ metadata:
     type: local
 spec:
   capacity:
-    storage: null
+    storage: 10Gi
   volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
   storageClassName: opensearch-master-storageclass
   local:
-    path: /data/dataisec-3
+    path: /data/dataisec1
   nodeAffinity:
     required:
       nodeSelectorTerms:
