--- a/backend/deploymentTemplate/opensearch-master/deploy-scripts/opensearch-master-1.0.0-quota.yaml
+++ b/backend/deploymentTemplate/opensearch-master/deploy-scripts/opensearch-master-1.0.0-quota.yaml
@@ -2,20 +2,20 @@ apiVersion: v1
 kind: ResourceQuota
 metadata:
   name: opensearch-master-quota
-  namespace: opensearch-master
+  namespace: opensearch-master1
 spec:
   hard:
-    requests.cpu: "400m"
-    requests.memory: "4Gi"
-    limits.cpu: "4000m"
-    limits.memory: "8Gi"
-    pods: "2"
-    configmaps: "3"
-    persistentvolumeclaims: "3"
-    services: "3"
-    secrets: "3"
-    count/deployments.apps: "2"
-    count/replicasets.apps: "3"
-    count/statefulsets.apps: "3"
+    requests.cpu: "1500m"
+    requests.memory: "6Gi"
+    limits.cpu: "6000m"
+    limits.memory: "6Gi"
+    pods: "3"
+    configmaps: "6"
+    persistentvolumeclaims: "6"
+    services: "6"
+    secrets: "6"
+    count/deployments.apps: "3"
+    count/replicasets.apps: "6"
+    count/statefulsets.apps: "6"
     count/jobs.batch: "10"
     count/cronjobs.batch: "10"
